[package]
name = "bam-net"
version = "0.2.0"
edition = "2021"
description = "Typed, queryable access to Jito BAM network data (nodes, validators, stake) from the public BAM explorer API."
license = "Apache-2.0"
repository = "https://github.com/RYthaGOD/bam-net"
keywords = ["solana", "jito", "bam", "validator", "mev"]
categories = ["api-bindings", "command-line-utilities"]
readme = "README.md"

[lib]
name = "bam_net"
path = "src/lib.rs"

[[bin]]
name = "bam-net"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
thiserror = "2"
# Pure-Rust RFC3339 timestamps for the snapshot history log (no C dependency).
time = { version = "0.3", features = ["formatting"] }
